Version 1.13.0+dev:
 * Graphics:
   * New generic portrait for the Walking Corpse and Soulless
 * Language and i18n:
   * Updated translations:

Version 1.13.0:
 * Security fixes:
   * Fixed arbitrary file read from WML/Lua API (CVE-2015-0844, bug #23440).
 * Add-ons client:
   * The Update All button is now displayed on all Add-on Manager views instead
     of just the Upgradable filter view, and enabled only when there is at
     least one add-on that may be upgraded.
 * Add-ons server:
   * Add-on metadata pattern blacklisting implemented.
   * Major internal refactoring done.
 * AI:
   * New Micro AI: Fast AI
   * Big Animals Micro AI: bug fix for units not attacking when [avoid_unit] is
     not set
   * Bottleneck Micro AI: bug fix for case when allied units are present
   * Coward Micro AI: new optional key attack_if_trapped=
   * Forest Animals Micro AI: bug fix for wander terrain lying on border hexes
   * Herding Micro AI: bug fix for dogs sometimes having moves left at end
   * Lurkers Micro AI: fix bug in wander terrain selection
   * Lurkers Micro AI: bug fix for attack error when lurker runs into ambush
   * Lurkers MAI: bug fix for attempting to attack petrified units
   * Messenger Escort Micro AI: new optional parameters [filter],
     [filter_second] and invert_order=
   * Stationed Guardian Micro AI: make guard_x/y= optional keys
   * Stationed Guardian Micro AI: bug fix for unreachable stations
   * Messenger Escort Micro AI: bug fix for escort units blocking messenger's
     progress
   * Several Micro AIs: fix a variety of rarely occurring but serious bugs, such
     as invalid savegames or disabling the AI from working for the rest of the
     turn or after changing the Micro AI settings.
   * Bug fix for requiring unnecessary keys for removal of several Micro AIs
   * Fixed a bug that made it impossible to change or delete Micro AIs after a
     game had been reloaded (bug #21750). This was a general bug in the RCA AI