@@ -114,11 +114,42 @@
 													horizontal_alignment = "left"
 													border = "all"
 													border_size = 5
-													[image]
-														id = "icon"
+													[stacked_widget]
+														id = ""
 														definition = "default"
 														linked_group = "icon"
-													[/image]
+														[stack]
+															[layer]
+																[row]
+																	[column]
+																		grow_factor = 1
+																		horizontal_grow = "true"
+																		border = "left"
+																		border_size = 3
+																		[image]
+																			id = "victory"
+																			definition = "default"
+																			label = "misc/laurel.png"
+																		[/image]
+																	[/column]
+																[/row]
+															[/layer]
+															[layer]
+																[row]
+																	[column]
+																		grow_factor = 1
+																		horizontal_grow = "true"
+																		border = "left"
+																		border_size = 3
+																		[image]
+																			id = "icon"
+																			definition = "default"
+																		[/image]
+																	[/column]
+																[/row]
+															[/layer]
+														[/stack]
+													[/stacked_widget]
 												[/column]
 												[column]
 													grow_factor = 1
