@@ -9,6 +9,9 @@ Version 1.13.0+dev:
  * Language and i18n:
    * Updated translations:
 
+ * User interface:
+   * Started showing on which difficulty levels a campaign was completed.
+
 
 Version 1.13.0:
  * Security fixes:
