@@ -1081,7 +1081,7 @@ void game_launcher::launch_game(RELOAD_GAME_DATA reload)
 		// don't show The End for multiplayer scenario
 		// change this if MP campaigns are implemented
 		if(result == VICTORY && state_.classification().campaign_type != game_classification::MULTIPLAYER) {
-			preferences::add_completed_campaign(state_.classification().campaign);
+			preferences::add_completed_campaign(state_.classification().campaign, state_.classification().difficulty);
 			the_end(disp(), state_.classification().end_text, state_.classification().end_text_duration);
 			if(state_.classification().end_credits) {
 				about::show_about(disp(),state_.classification().campaign);
