@@ -3,6 +3,8 @@ Version 1.13.0+dev:
    * New generic portrait for the Walking Corpse and Soulless
  * Language and i18n:
    * Updated translations:
+ * User interface:
+   * Started showing on which difficulty levels a campaign was completed.
 
 Version 1.13.0:
  * Security fixes:
